# pharmacy-pigeon

./: .gitignore  README.md  app.py  config.py  database.db  forms.py  jobs.py  main.py  medsdata.db  models.py  mpstrony.txt  poetry.toml  pyproject.toml  routs.py  rundb.py  utils.py  views.py
database/: database.py  database_connection.py
locators/: meds_locators.py  meds_pages_locators.py
medivisor/: __init__.py  forms.py  models.py  views.py
medivisor/cart/: views.py
medivisor/cart/services/: cart_service.py
medivisor/order/: views.py
medivisor/static/: styles.css
medivisor/templates/: annulation-mail.html  base.jinja2  cart.html  confirmation-mail.html  confirmation.html  home.jinja2  rodo.html  search_results.html
pages/: all_meds_pages.py
parsers/: meds_parsers.py
scrapper/: first_scrapper.py
static/: styles.css
templates/: base.jinja2  cart.html  confirmation.html  error_page.html  home.jinja2  rodo.html  search_results.html
