[tool.poetry]
name = "pharmacy-pigeon"
version = "0.1.0"
description = ""
authors = ["petrificustotalus <natalka_nowak@tlen.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
WTForms = "^2.3.3"
Flask-WTF = "^0.14.3"
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
rope = "^0.18.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
